--- a/index.html
+++ b/index.html
@@ -13,19 +13,17 @@
      <div class="row">
        <div>
       <div>
-          <h2>Welcome ! Linux Search Builder !</h2>
-          <h5 class = "tagLine">-Command made easy</h5>
         <input type="text" ng-model="searchText"/>
       </div>
       <div>
-        <a class="waves-effect waves-light btn subButton" ng-click="submit()">Submit</a>
+        <a class="waves-effect waves-light btn" ng-click="submit()">Submit</a>
       </div>
     </div>
     </div>
     <div class="row">
       <div ng-repeat="operation in configs.operations" class="col-md-2 col-sm-2">
          
-          <input type="radio"  ng-model="$parent.selectedOperation" name="nam"  ng-value="operation.operation_name" />
+          <input type="radio" ng-model="$parent.selectedOperation" name="nam"  ng-value="operation" />
             <label>
               {{operation.textContent}}
             </label>
@@ -33,14 +31,14 @@
       </div>
       <div class="row">
         <div ng-repeat="option in selectedOperation.options" >
-          <label><input type="checkbox" ng-model="option.checked"/>{{option.textContent}}</label>
+          <label>{{option.textContent}}<input type="checkbox" ng-model="option.checked"/></label>
         </div>
         <div ng-repeat="option in configs.common_operations.options">
-          <label><input type="checkbox" ng-model="option.checked"/>{{option.textContent}}</label>
+          <label>{{option.textContent}}<input type="checkbox" ng-model="option.checked"/></label>
         </div>
       </div>
       <div class="row">
-        <code class ="result">{{result}}</code>
+        <code>{{result}}</code>
       </div>
   </body>
 
